updated pages to own directory

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
                 <!--TODO: Turn the cards into buttons and make them pop up on hover-->
 
                 <div class="cards">
-                    <div type="POST" onclick="location.href='/project1.html'">
+                    <div type="POST" onclick="location.href='pages/project1.html'">
                         <img src="images/bg1.jpg">
                         <h3>Project 1</h3>
                         <button>View More Details</button> 
                     </div>
-                    <div type="POST" onclick="location.href='/project2.html'">
+                    <div type="POST" onclick="location.href='pages/project2.html'">
                         <img src="images/bg3.jpg">
                         <h3>Project 2</h3>
                         <button>View More Details</button> 
                     </div>
-                    <div type="POST" onclick="location.href='/project3.html'">
+                    <div type="POST" onclick="location.href='pages/project3.html'">
                         <img src="images/bg5.jpg">
                         <h3>Project 3</h3>
                         <button>View More Details</button> 
