--- a/pages/project2.html
+++ b/pages/project2.html
@@ -3,29 +3,29 @@
     <head>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="../styles.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link rel="images" href="images/*">
-    <title>Project 3</title>
-    <script src="js/nav.js" defer></script>
+    <link rel="images" href="../images/*">
+    <title>Project 2</title>
+    <script src="../js/nav.js" defer></script>
     </head>
 
-    <div id="home" class="start" project3="true">
+    <div id="home" class="start" project2="true">
         <nav id="navbar">
-            <a class="logo" href="index.html"><img src="images/logo.png"></a>
+            <a class="logo" href="../index.html"><img src="../images/logo.png"></a>
             <button id="mobile-nav-toggle" class="mobile-nav-toggle">+</button>
             <ul id="navigation" class="navigation" data-visible="false">
-                <li class="navbutton"><a href="index.html#home">Home</a></li>
-                <li class="navbutton"><a href="index.html#about">About</a></li>
-                <li class="navbutton"><a href="index.html#projects">Projects</a></li>
-                <li class="navbutton"><button onclick="location.href='index.html#contact'">Contact</button></li>
+                <li class="navbutton"><a href="../index.html#home">Home</a></li>
+                <li class="navbutton"><a href="../index.html#about">About</a></li>
+                <li class="navbutton"><a href="../index.html#projects">Projects</a></li>
+                <li class="navbutton"><button onclick="location.href='../index.html#contact'">Contact</button></li>
             </ul>
         </nav>
 
         <div class="intro">
             <div class="text">
                 <h1>
-                    Project 3
+                    Project 2
                 </h1>
                 <p>
                     Brief Description
